--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "create-react-app": "^4.0.0",
     "flux": "^3.1.3",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-google-maps-loader": "^4.3.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-slick": "^0.27.12",
