--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-maps-react": "^2.0.6",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
