--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.9.3",
     "react-google-maps": "^9.4.5",
     "react-google-maps-loader": "^4.3.0",
     "react-icons": "^3.11.0",
