--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "create-react-app": "^4.0.0",
+    "firebase": "^8.0.0",
     "flux": "^3.1.3",
     "google-map-react": "^2.1.8",
     "google-maps-react": "^2.0.6",
@@ -38,7 +39,6 @@
     "eject": "react-scripts eject",
     "type": "module"
   },
-  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": [
       "react-app",
