--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test": "react-scripts test --collect-coverage --watchAll",
     "eject": "react-scripts eject",
     "type": "module"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -58,5 +59,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "jest": {
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx}",
+			"!src/index.js",
+			"!src/reportWebVitals.js"
+		]
+	}
 }
