--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
 		"collectCoverageFrom": [
 			"src/**/*.{js,jsx}",
 			"!src/index.js",
-			"!src/reportWebVitals.js"
+      "!src/reportWebVitals.js",
+      "!src/App.js",
+      "!src/actions/firebase"
+      
 		]
 	}
 }
